Fixed the unwanted white space in IE below the toplogo banner

--- a/styles_s3.css
+++ b/styles_s3.css
@@ -14,3 +14,7 @@
     width:100%;
     padding:0;
 }
+
+.topLogo img {
+    display:block; 
+}
